--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,19 @@ body {
   margin-right: 76px;
 }
 
+/* .before-link {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 4px;
+  flex-shrink: 0;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  position: absolute;
+  bottom: -20px;
+  
+} */
+
 .accent-logo {
   font-family: var(--secondary-font);
   font-style: normal;
