--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
   --cornflower: #e7e9fc;
   --grey: rgba(46, 47, 66, 0.7);
   --white-color--: #f4f4fd;
-  --color-link--:#4d5ae5;
-  --secondary-link-color:#8e8f99;
+  --color-link--: #4d5ae5;
+  --secondary-link-color: #8e8f99;
 }
 
 h1,
@@ -164,17 +164,16 @@ body {
 }
 
 .social-link {
-  margin-bottom: 24px;
   fill: var(--white-color--);
   width: 100%;
   height: 100%;
-  background-color:var(--color-link--);
+  background-color: var(--color-link--);
   border-color: var(--color-link--);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -192,11 +191,6 @@ body {
   gap: 16px;
 }
 
-.social-icon {
-  width: 24px;
-  height: 24px;
-}
-
 .footer-div {
   align-items: baseline;
 }
@@ -204,19 +198,34 @@ body {
 .footer-logo-div {
   margin-right: 120px;
 }
+
 /* ==================/COMPONENTS================ */
 /* HEADER */
 .menu-link {
   display: block;
   font-weight: 500;
+
   color: var(--secondary-text-color);
   padding-top: 24px;
   padding-bottom: 24px;
+  position: relative;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
+}
+
+.menu-link.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 .address {
@@ -226,8 +235,8 @@ body {
 .menu-link-contact {
   font-style: normal;
   font-weight: 400;
-
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link-contact:hover,
@@ -248,7 +257,6 @@ body {
 
 /* ==============HEADER================ */
 .page-header {
-  padding: 24px 0;
   border-bottom: 1px solid var(--cornflower);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -346,6 +354,7 @@ body {
   border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-btn:hover,
@@ -368,11 +377,9 @@ body {
   align-items: center;
   justify-content: center;
   height: 112px;
-  background-color:var(--white-color--);
+  background-color: var(--white-color--);
   border-radius: 4px;
   margin-bottom: 8px;
-  
-  
 }
 
 .soulitions-list {
@@ -445,31 +452,32 @@ body {
 }
 
 .item-customers {
-width: calc((100% - 120px) / 6);
-height: 88px;
+  width: calc((100% - 120px) / 6);
+  height: 88px;
 }
 
 .customers-link {
-width: 100%;
-height: 100%;
-border: 1px solid var(--secondary-link-color);
-border-radius: 4px;
-display: flex;
-align-items: center;
-justify-content: center;
-color: var(--secondary-link-color);
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--secondary-link-color);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--secondary-link-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
 .customers-link:focus {
-border-color:var(--accent-color);
-color: var(--accent-color);
+  border-color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .customers-icon {
   fill: currentColor;
 }
-
 
 /*================ FOOTER=============== */
 .footer {
@@ -514,10 +522,8 @@ color: var(--accent-color);
   border: 1px solid var(--cornflower, #e7e9fc);
   padding: 12px 24px;
   min-width: auto;
-  }
+}
 
-  
-  
 .gallary-list {
   display: flex;
   flex-wrap: wrap;
@@ -527,14 +533,38 @@ color: var(--accent-color);
 
 .gallery-project-link {
   display: block;
-
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-project-link:hover,
 .gallery-project-link:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.gallary-project-wrapper {
+  position: relative;
+  overflow: hidden;
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background: var(--iris, #4d5ae5);
+  padding: 40px 32px;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery-project-link:hover .overlay,
+.gallery-project-link:focus .overlay {
+  transform: translateY(0);
+}
 .gallary-card-content-wrraper {
   padding: 32px 16px;
   border: 1px solid var(--cornflower, #e7e9fc);
@@ -546,7 +576,8 @@ color: var(--accent-color);
   color: #ffffff;
   background: var(--accent-color);
   border: 1px solid transparent;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12)
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .progecrt-name {
@@ -568,6 +599,51 @@ color: var(--accent-color);
   display: flex;
 }
 
-.social-media-div {
-  margin-left: 120px;
+/* ===================MODAL WINDOW=================== */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  background: var(--dairy, #fcfcfc);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+.modal-close-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: var(--cornflower, #e7e9fc);
+  cursor: pointer;
 }
