--- a/css/styles.css
+++ b/css/styles.css
@@ -205,11 +205,11 @@ body {
   display: block;
   font-weight: 500;
 
-  color: var(--secondary-text-color);
+  color: var(--accent-color);
   padding-top: 24px;
   padding-bottom: 24px;
   position: relative;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
@@ -506,6 +506,10 @@ body {
   margin-left: auto;
 }
 .item-filter {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-filter {
@@ -632,18 +636,32 @@ body {
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-button {
   position: absolute;
   top: 24px;
   right: 24px;
   display: flex;
+  padding: 0;
   justify-content: center;
   align-items: center;
   width: 24px;
   height: 24px;
-  border-radius: 24px;
+  border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: var(--cornflower, #e7e9fc);
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+  background-color: var(--accent-color);
+  border: none;
+  fill: var(--page-background-color);
+}
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
