--- a/css/styles.css
+++ b/css/styles.css
@@ -295,10 +295,10 @@ body {
   margin-right: 40px;
 }
 
-.mail-contact {
+/* .mail-contact {
   margin-left: auto;
   margin-right: 40px;
-}
+} */
 
 /* ==============HERO================== */
 .hero {
@@ -506,10 +506,6 @@ body {
   margin-left: auto;
 }
 .item-filter {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-filter {
@@ -526,6 +522,10 @@ body {
   border: 1px solid var(--cornflower, #e7e9fc);
   padding: 12px 24px;
   min-width: auto;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallary-list {
